--- a/it_modernization/data/events.yaml
+++ b/it_modernization/data/events.yaml
@@ -535,6 +535,35 @@
   agency: USAID
 
 - date: 2025-02-02
+  type: report
+  event: Wired Magazine identifies Akash Bobba, Gavin Kliger and Edward Coristine as special advisors reporting to Amanda Scales at OPM
+  named:
+  - Akash Bobba
+  - Edward Coristine
+  - Gavin Kliger
+  source: https://www.wired.com/story/elon-musk-government-young-engineers/
+  agency: OPM
+
+- date: 2025-02-02
+  type: report
+  event: Wired Magazine identifies several DOGE staffers with GSA email addresses and A-Suite Level clearances granting them access to all physical spaces and IT systems
+  named:
+  - Akash Bobba
+  - Edward Coristine
+  - Luke Farritor
+  - Ethan Shaotran
+  source: https://www.wired.com/story/elon-musk-government-young-engineers/
+  agency: GSA
+
+- date: 2025-02-02
+  type: report
+  event: Wired Magazine identifies Cole Killian as a volunteer at DOGE
+  named:
+  - Cole Killian
+  source: https://www.wired.com/story/elon-musk-government-young-engineers/
+  agency: DOGE
+
+- date: 2025-02-02
   type: disruption
   event: Elon Musk posts a series of tweets calling USAID evil and saying it is "time for it to die"
   source: https://www.nbcnews.com/politics/doge/elon-musk-boosted-false-usaid-conspiracy-theories-global-aid-rcna190646
