--- a/it_modernization/data/events.yaml
+++ b/it_modernization/data/events.yaml
@@ -3583,3 +3583,9 @@
   - Treasury
   - OPM
   - Education
+
+- date: 2025-04-08
+  type: report
+  event: Employees at the EPA are reportedly being told by Trump-appointed officials that DOGE was using AI to monitor communication tools (including Microsoft Teams) for anti-Trump or anti-Musk language
+  source: https://www.reuters.com/technology/artificial-intelligence/musks-doge-using-ai-snoop-us-federal-workers-sources-say-2025-04-08/
+  agency: EPA
