--- a/it_modernization/data/roundups.yaml
+++ b/it_modernization/data/roundups.yaml
@@ -280,3 +280,40 @@
     Jordan Wick: DOGE
     Ryan Wunderly: DOGE
     Chris Young: DOGE
+
+# Bloomberg
+- title: The Musk Associates Running the Government
+  publisher: Bloomberg
+  last_updated: 2025-04-08
+  scope: Focused on people pulled from Musk-related companies
+  source: https://www.bloomberg.com/features/2025-elon-musk-trump-admin-network/
+  people:
+    Anthony Armstrong: OPM
+    Antonio Gracias: [ DOGE, SSA ]
+    Aram Moghaddassi: [ DOGE, SSA, HHS, DOL ]
+    Jared Isaacman: NASA
+    Joe Gebbia: [ DOGE, OPM ]
+    Michael Grimes: Commerce
+    Nicole Hollander: GSA
+    Ryan Riedel: Energy
+    Steve Davis: [ DOGE, SSA ]
+    Thomas Shedd: [ GSA, DOL ]
+    Adam Ramada: [ DOGE, Education, DOL, Energy ]
+    Alexander Simonpour: [ DOGE, NASA ]
+    Amanda Scales: OPM
+    Brady Glantz: FAA
+    Brian Bjelde: OPM
+    Bryanne-Michelle Mlodzianowski: OPM
+    Christina Hanna: OPM
+    Christopher Stanley: [ DOGE, OPM ]
+    Edward Coristine: [ DOGE, HHS, GSA, USAID, DHS, State, CISA, CMS ]
+    Jennifer Balajadia: DOGE
+    Jon Koval: [ DOGE, SSA, VA ]
+    Justin Monroe: [ OPM, FBI ]
+    Luke Farritor: [ DOGE, HHS, GSA, Energy, CFPB ]
+    Marko Elez: [ DOGE, SSA, HHS, DOL, Treasury ]
+    Payton Rehling: [ DOGE, SSA, VA, USCIS ]
+    Riccardo Biasini: OPM
+    Stephen Duarte: OPM
+    Thomas Kiernan: FAA
+    Ted Malaska: FAA
