Morning DOGE events update

--- a/it_modernization/data/agencies.yaml
+++ b/it_modernization/data/agencies.yaml
@@ -137,6 +137,9 @@
   id: NSA
   parent_id: DOD
 
+- name: Office of the Director of National Intelligence
+  id: ODNI
+
 - name: Office of Personnel Management
   id: OPM
 
