--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -231,6 +231,11 @@ CMS:
     - CDC
     - NIH
     - CMS
+  - date: 2025-04-07
+    type: report
+    event: Newly-appointed director of CMS, Dr. Mehmet Oz, suggests replacing front-line healthcare workers with AI avatars for cost savings
+    agency: CMS
+    source: https://www.wired.com/story/dr-oz-ai-health-care-medicare-cms-town-hall/
   systems:
     AGX:
       name: Acquistions and Grants Exchange
@@ -649,6 +654,11 @@ USDA:
     event: USDA Secretary Rollins posts a photo of a grant-cancellation session on the @DOGE_USDA account
     source: https://xcancel.com/SecRollins/status/1892777526704885880#m
     agency: USDA
+  - date: 2025-02-25
+    type: report
+    event: The Chief Human Capital Office of the Department of Agriculture testifies to Congress that OPM ordered the firing of all probationary federal employees
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    agency: USDA
   - date: 2025-04-01
     type: disruption
     event: Federal staff at the USDA are sent an email offering them another chance to do a deferred resignation if they enroll within the next week or so
@@ -719,6 +729,11 @@ DOD:
     type: disruption
     event: Federal staff at the DOD are sent an email offering them another chance for a deferred resignation if they enroll within the next week or so
     source: https://www.defense.gov/News/News-Stories/Article/Article/4138965/hegseth-orders-civilian-workforce-realignment-in-dod-reopens-drp/
+    agency: DOD
+  - date: 2025-04-08
+    type: report
+    event: DOGE staff are reportedly examining Navy's enterprise software licenses under the direction of the DOD CIO
+    source: https://defensescoop.com/2025/04/08/doge-reviewing-navy-software-enterprise/
     agency: DOD
   systems: {}
   cases: {}
@@ -3561,6 +3576,19 @@ NSA:
   systems: {}
   cases: {}
 
+ODNI:
+  name: Office of the Director of National Intelligence
+  id: ODNI
+  associated: []
+  events:
+  - date: 2025-04-08
+    type: report
+    event: Tulsi Gabbard, the Director of National Intelligence, creates a Director's Initiatives Group (DIG) of 10 people outside the agency vetted by the White House. It has a similar mission but is reported to be separate from DOGE
+    agency: ODNI
+    source: https://www.washingtonpost.com/national-security/2025/04/08/tulsi-gabbard-intelligence-doge-cuts-weaponization/
+  systems: {}
+  cases: {}
+
 OPM:
   name: Office of Personnel Management
   id: OPM
@@ -3580,6 +3608,7 @@ OPM:
   - Greg Hogan
   - Stephanie Holmes
   - Gavin Kliger
+  - Keenan Kmiec
   - Scott Kupor
   - Jeremy Lewin
   - Tarak Makecha
@@ -3593,6 +3622,40 @@ OPM:
   - Christopher Stanley
   - Chris Young
   events:
+  - date: 2025-01-16
+    type: report
+    event: Noah Peters receives a job offer to work at the OPM. He describes it as very general and vague.
+    comment: Date is approximate
+    named:
+    - Noah Peters
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    agency: OPM
+  - date: 2025-01-16
+    type: report
+    event: Noah Peters recalls discussing the concept of using administrative leave to sideline federal employees with Keenan Kmiec before January 20th
+    comment: Date is approximate
+    named:
+    - Noah Peters
+    - Keenan Kmiec
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    agency: OPM
+  - date: 2025-01-16
+    type: report
+    event: Noah Peters starts working on two memos around temporary authorities for Schedule C and another on probationary employees and admininstrative leave. These are to be issued on January 20th.
+    comment: Date is approximate
+    named:
+    - Noah Peters
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    agency: OPM
+  - date: 2025-01-17
+    type: report
+    event: Several of the DOGE staff meet to plan for their first day at OPM. They are not federal employees at that time.
+    named:
+    - Noah Peters
+    - Amanda Scales
+    - Brian Bjelde
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    agency: OPM
   - date: 2025-01-20
     type: onboarded
     onboard_type: appointed
@@ -3606,6 +3669,15 @@ OPM:
     type: report
     event: The DOGE team moves into OPM, installing sofa beds and armed security
     source: https://www.reuters.com/world/us/musk-aides-lock-government-workers-out-computer-systems-us-agency-sources-say-2025-01-31/
+    agency: OPM
+  - date: 2025-01-20
+    type: onboarded
+    onboard_type: appointed
+    event: Several DOGE leaders start work at the OPM immediately after the Inauguration
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    named:
+    - Noah Peters
+    - Amanda Scales
     agency: OPM
   - date: 2025-01-23
     type: report
@@ -4248,6 +4320,13 @@ SSA:
     type: report
     event: The Social Security Administration ends a Biden-era rule that limited clawbacks for overpayments to 10% per check (to prior policy of taking entire checks)
     source: https://www.cbsnews.com/news/social-security-benefits-clawback-overpayment-100-percent-march-27-doge/
+    agency: SSA
+  - date: 2025-03-27
+    type: report
+    event: In a sworn declaration, Leland Dudek justifies access to PII in SSA records for Employee 1, Employee 5, Employee 8 and Employee 9 on the DOGE team. This access is through the SSA's Enterprise Data Warehouse (EDW) system. He claims DOGE staff are being granted only the minimum levels of schema access required.
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.62.1.pdf
+    named:
+    - Leland Dudek
     agency: SSA
   - date: 2025-03-28
     type: report
