--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -219,6 +219,24 @@ Amanda Scales:
   - Office of Personnel Management
   events:
   - agency: OPM
+    date: 2025-01-17
+    event: Several of the DOGE staff meet to plan for their first day at OPM. They are not federal employees at that time.
+    named:
+    - Noah Peters
+    - Amanda Scales
+    - Brian Bjelde
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: report
+  - agency: OPM
+    date: 2025-01-20
+    event: Several DOGE leaders start work at the OPM immediately after the Inauguration
+    named:
+    - Noah Peters
+    - Amanda Scales
+    onboard_type: appointed
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: onboarded
+  - agency: OPM
     date: 2025-01-27
     event: A member of the OPM union posts a Reddit message reportedly from an OPM employee stating that the email server is a piece of outside equipment and the goal is to generate lists of all govt employees to send massive firing notices later.
     named:
@@ -643,6 +661,15 @@ Brian Bjelde:
   - Office of Personnel Management
   - Social Security Administration
   events:
+  - agency: OPM
+    date: 2025-01-17
+    event: Several of the DOGE staff meet to plan for their first day at OPM. They are not federal employees at that time.
+    named:
+    - Noah Peters
+    - Amanda Scales
+    - Brian Bjelde
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: report
   - agency: SSA
     date: 2025-02-12
     detailed_from: OPM
@@ -2484,7 +2511,17 @@ Keenan Kmiec:
   agencies:
   - Department of Government Efficiency
   - Executive Office of the President
+  - Office of Personnel Management
   events:
+  - agency: OPM
+    comment: Date is approximate
+    date: 2025-01-16
+    event: Noah Peters recalls discussing the concept of using administrative leave to sideline federal employees with Keenan Kmiec before January 20th
+    named:
+    - Noah Peters
+    - Keenan Kmiec
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: report
   - agency: DOGE
     date: 2025-03-26
     event: Under increasing pressure from litigation, DOGE expands its own legal team to 10 lawyers
@@ -2765,6 +2802,13 @@ Leland Dudek:
     - Leland Dudek
     - Mike Russo
     source: https://thehill.com/homenews/5212751-sen-wyden-questions-bisignano/
+    type: report
+  - agency: SSA
+    date: 2025-03-27
+    event: In a sworn declaration, Leland Dudek justifies access to PII in SSA records for Employee 1, Employee 5, Employee 8 and Employee 9 on the DOGE team. This access is through the SSA's Enterprise Data Warehouse (EDW) system. He claims DOGE staff are being granted only the minimum levels of schema access required.
+    named:
+    - Leland Dudek
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.62.1.pdf
     type: report
 
 Luke Farritor:
@@ -4015,6 +4059,49 @@ Noah Peters:
   - Executive Office of the President
   - Office of Personnel Management
   events:
+  - agency: OPM
+    comment: Date is approximate
+    date: 2025-01-16
+    event: Noah Peters receives a job offer to work at the OPM. He describes it as very general and vague.
+    named:
+    - Noah Peters
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: report
+  - agency: OPM
+    comment: Date is approximate
+    date: 2025-01-16
+    event: Noah Peters recalls discussing the concept of using administrative leave to sideline federal employees with Keenan Kmiec before January 20th
+    named:
+    - Noah Peters
+    - Keenan Kmiec
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: report
+  - agency: OPM
+    comment: Date is approximate
+    date: 2025-01-16
+    event: Noah Peters starts working on two memos around temporary authorities for Schedule C and another on probationary employees and admininstrative leave. These are to be issued on January 20th.
+    named:
+    - Noah Peters
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: report
+  - agency: OPM
+    date: 2025-01-17
+    event: Several of the DOGE staff meet to plan for their first day at OPM. They are not federal employees at that time.
+    named:
+    - Noah Peters
+    - Amanda Scales
+    - Brian Bjelde
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: report
+  - agency: OPM
+    date: 2025-01-20
+    event: Several DOGE leaders start work at the OPM immediately after the Inauguration
+    named:
+    - Noah Peters
+    - Amanda Scales
+    onboard_type: appointed
+    source: https://storage.courtlistener.com/recap/gov.uscourts.cand.444883/gov.uscourts.cand.444883.188.1.pdf
+    type: onboarded
   - agency: DOGE
     date: 2025-03-26
     event: Under increasing pressure from litigation, DOGE expands its own legal team to 10 lawyers
